fixed spacing issue of sticky header

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://themezee.com/themes/poseidon/
 Author: ThemeZee
 Author URI: https://themezee.com
 Description: Poseidon is an elegant designed WordPress theme featuring a splendid fullscreen image slideshow. The clean typography and spacious white layout makes it great to share your stories. You can use the theme as simple blog or easily create a news website with the widget-based Magazine Homepage template.
-Version: 1.1.7
+Version: 1.1.8
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: poseidon
@@ -2474,34 +2474,35 @@ object {
 		width: 100%;
 	}
 
-	.sticky-header .site-header .site-branding,
-	.sticky-header .site-header .primary-navigation {
-		margin: 0;
-		-webkit-transition: all 0.3s ease;
-		transition: all 0.3s ease;
-	}
-
-	.sticky-header .site-header .site-branding .site-title {
-		margin: 0.25em 0 0;
-		font-size: 28px;
-		font-size: 1.75rem;
-	}
-
-	.sticky-header .site-header .site-branding .custom-logo {
-		margin-top: 1em;
-		max-height: 25px;
-		width: auto;
-	}
-
-	.sticky-header .site-header .site-description {
-		display: none;
-	}
-
 	.sticky-header.admin-bar .site-header  {
 		top: 32px;
 	}
 
 	.sticky-header .header-bar-wrap {
+		display: none;
+	}
+
+	/* Small Header */
+	.sticky-header.small-header .site-header .site-branding,
+	.sticky-header.small-header .primary-navigation {
+		margin: 0;
+		-webkit-transition: all 0.4s ease;
+		transition: all 0.4s ease;
+	}
+
+	.sticky-header.small-header .site-header .site-branding .site-title {
+		margin: 0.25em 0 0;
+		font-size: 28px;
+		font-size: 1.75rem;
+	}
+
+	.sticky-header.small-header .site-header .site-branding .custom-logo {
+		margin-top: 1em;
+		max-height: 25px;
+		width: auto;
+	}
+
+	.sticky-header.small-header .site-header .site-description {
 		display: none;
 	}
 }
